Add some details in week 11

--- a/multilinear/week11.tex
+++ b/multilinear/week11.tex
@@ -239,7 +239,11 @@ $M =[{\sf T}]_\beta, A = \psi_\beta(f)$, then $A = M^tAM$.
     \left\{\,
       M \in \text{GL}_n(\Rb) \middle|
       M^tJM = J
-    \,\right\}$.
+      \,\right\}$, where 
+    \[ J = \begin{pmatrix}
+        0 & I_k \\
+        -I_k & 0
+    \end{pmatrix} \]
 \end{itemize}
 
 \subsubsection{Tensor product}
