--- a/multilinear/week12.tex
+++ b/multilinear/week12.tex
@@ -95,7 +95,7 @@ Let $M, N$ and $U$ be $R$-module. Then
 \begin{proof} \mbox{}
   \begin{itemize}
     \item For $f \in \Hom_R\left(M \otimes_R N, U\right)$ and $a \in N$,
-      define $f_a: x :: M \mapsto f(x \otimes a) :: U$.
+      define $f_a = x :: M \mapsto f(x \otimes a) :: U$.
       \begin{itemize}
         \item linear: easy.
         \item $\ob{f}: a \mapsto f_a$ is an $R$-mod homo.: easy.
@@ -105,7 +105,7 @@ Let $M, N$ and $U$ be $R$-module. Then
           = r\tau(f)(a)(x) + \tau(g)(a)(x)$
       \end{itemize}
     \item For $g \in \Hom_R\left(N, \Hom_R(M, U)\right)$,
-      define $g': (x, a) :: M \times N \mapsto g(a)(x) :: U$.
+      define $g' = (x, a) :: M \times N \mapsto g(a)(x) :: U$.
       \begin{itemize}
         \item $g'$ is $R$-bilinear: easy.
         \item $\exists! \tilde{g}: x\otimes a \mapsto g(a)(x)$.
