Add 12-5, some OMIMI

--- a/main.tex
+++ b/main.tex
@@ -162,6 +162,13 @@
 \newcommand{\Mf}{\mathfrak{M}}
 \newcommand{\Grf}{\mathfrak{Gr}}
 
+\newcommand{\bigOp}{\raisebox{0.3ex}{$\bigoplus$}}
+\newcommand{\bigOt}{\raisebox{0.3ex}{$\bigotimes$}}
+\newcommand{\Op}{\oplus}
+\newcommand{\Ot}{\otimes}
+
+\DeclareMathOperator{\Sym}{Sym}
+\DeclareMathOperator{\Alt}{Alt}
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\lcm}{lcm}
@@ -263,6 +270,7 @@
 \include{group/week9}
 \include{multilinear/week11}
 \include{multilinear/week12}
+\include{multilinear/week13}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
