--- a/multilinear/week12.tex
+++ b/multilinear/week12.tex
@@ -164,7 +164,7 @@ $V^* \otimes_F W \cong \Hom_F(V, W)$.
       \]
     \item A graded $R$-algebra is an $R$-algebra with a chosen grading.
     \item $\mathfrak{M}_R$ is the category of $R$-modules.
-    \item $\mathfrak{Gr}_R$ is the category of graded $R$-modules.
+    \item $\mathfrak{Gr}_R$ is the category of graded $R$-algebras.
       ($f: A \to A'$ with $f(A_n) \subseteq A_n'$)
   \end{itemize}
 \end{definition}
@@ -268,7 +268,7 @@ $f_k$ is $k$-multilinear $\leadsto$
     \varphi(x_1) \dots \varphi(x_k)
   \end{array}
 \]
-By universal property of $\bigoplus$, exists a unique $R$-module homo.
+By the universal property of $\bigOp$, exists a unique $R$-module homo.
 $\tilde\varphi :: T(M) \to A$ which make the following diagram commutes.
 \[
   \begin{tikzcd}[cramped, column sep=tiny]
