--- a/multilinear/week12.tex
+++ b/multilinear/week12.tex
@@ -292,7 +292,7 @@ $\tilde\varphi$ is an $R$-algebra homomorphism.
   v_1, \dots, v_n \}$. Then
   \[
     \left\{
-      v_{i_1} \otimes \dots v_{i_k} \middle|
+      v_{i_1} \otimes \dots \otimes v_{i_k} \,\middle|\,
       \forall j = 1, \dots, k,\; i_j = 1, \dots, n
     \right\}
   \]
