--- a/main.tex
+++ b/main.tex
@@ -271,6 +271,7 @@
 \include{multilinear/week11}
 \include{multilinear/week12}
 \include{multilinear/week13}
+\include{linear_repr/week14}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
