--- a/main.tex
+++ b/main.tex
@@ -158,6 +158,7 @@
 \newcommand{\Hbx}{\mathbb{H}^\times}
 \newcommand{\Gc}{\mathcal{G}}
 \newcommand{\Fc}{\mathcal{F}}
+\newcommand{\Cc}{\mathcal{C}}
 
 \newcommand{\Mf}{\mathfrak{M}}
 \newcommand{\Grf}{\mathfrak{Gr}}
@@ -187,6 +188,7 @@
 \DeclareMathOperator{\Lrad}{lrad}
 \DeclareMathOperator{\Rrad}{rrad}
 \DeclareMathOperator{\rank}{rank}
+\DeclareMathOperator{\trace}{trace}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
