--- a/linear_repr/week14.tex
+++ b/linear_repr/week14.tex
@@ -13,7 +13,7 @@
 \begin{definition}
   A group homo. $\rho: G \to \text{GL}(V)$ is called a linear representation
   of $G$.
-  $\dim V$ is called the dgree of $\rho$.
+  $\dim V$ is called the degree of $\rho$.
   ($V$ is a representation space)
 
   For a fixed basis $\beta = \{\, e_i \,\}$,
@@ -63,8 +63,7 @@ For general $G$, with $V = \bigoplus_{g\in G} \Cb e_g$,
       trivial representation.
     \item $\rho: G \toone \text{GL}(V)$: faithful representation.
     \item $\rho, \rho'$ are said to be equivalent if $\exists$ a linear isom.
-      $T: V \isoto V'$ s.t.
-        
+      ${\sf T}: V \isoto V'$ s.t.
   \end{itemize}
 \end{definition}
 
@@ -173,7 +172,7 @@ $W$ is $G$-invariant $\leadsto$ $\rho(g) \big|_W: W \isoto W$.
             \rho(gg')^{-1}\circ\pi_1\circ\rho(gg')(x) \\
           &= \rho(g') \circ \pi^\circ(x)
         \end{align*}
-      \item $W^\circ \defeq = \ker \pi^\circ$ is $G$-invariant:
+      \item $W^\circ \defeq \ker \pi^\circ$ is $G$-invariant:
         $\forall x \in W^\circ$, $\pi^\circ(\rho(g)(x))
         = \rho(g)(\pi^\circ(x)) = \rho(g)(0) = 0$. So
         $\rho(g)(x) \in W^\circ$.
