--- a/linear_repr/week14.tex
+++ b/linear_repr/week14.tex
@@ -299,7 +299,7 @@ Basic facts:
 
 \begin{definition}
   $\phi, \psi \in \Cc(G, \Cb)$, then
-  \[ \inpd{\phi, \psi} \defeq \sum_{g\in G} \phi(g) \ob{\psi(g)} \]
+  \[ \inpd{\phi, \psi} \defeq \frac{1}{\abs{G}} \sum_{g\in G} \phi(g) \ob{\psi(g)} \]
   is a positive definite Hermitian form on $\Cc(G, \Cb)$.
 \end{definition}
 
