--- a/main.tex
+++ b/main.tex
@@ -159,6 +159,9 @@
 \newcommand{\Gc}{\mathcal{G}}
 \newcommand{\Fc}{\mathcal{F}}
 \newcommand{\Cc}{\mathcal{C}}
+\newcommand{\Dc}{\mathcal{D}}
+\newcommand{\sT}{{\sf T}}
+\newcommand{\sI}{{\sf I}}
 
 \newcommand{\Mf}{\mathfrak{M}}
 \newcommand{\Grf}{\mathfrak{Gr}}
@@ -274,6 +277,7 @@
 \include{multilinear/week12}
 \include{multilinear/week13}
 \include{linear_repr/week14}
+\include{linear_repr/week15}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
