--- a/linear_repr/week15.tex
+++ b/linear_repr/week15.tex
@@ -16,7 +16,7 @@
     We know $\chi_\rho = \chi_{\rho_1} + \dots + \chi_{\rho_k}$, so
     \[
       \inpd{\chi_\rho, \chi_{\tilde{\rho}}}
-      = \sum_{i=1}^k = \inpd{\chi_{\rho_i}, \chi_{\tilde{\rho}}}
+      = \sum_{i=1}^k \inpd{\chi_{\rho_i}, \chi_{\tilde{\rho}}}
     \]
     Recall $\rho_i \cong \tilde{\rho} \implies
     \inpd{\chi_{\rho_i}, \chi_{\tilde{\rho}}} = 1$, otherwise 
