--- a/main.tex
+++ b/main.tex
@@ -191,7 +191,7 @@
 \DeclareMathOperator{\Lrad}{lrad}
 \DeclareMathOperator{\Rrad}{rrad}
 \DeclareMathOperator{\rank}{rank}
-\DeclareMathOperator{\trace}{trace}
+\DeclareMathOperator{\trace}{Tr}
 
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
